# auto_ssh_auther

./: .gitignore  CHANGELOG.md  README.md  auto_ssh_auther.spec  build.py  main.py  pyproject.toml
_forAI/: dev_log.md  inventory.md  memo.md  myplan.md  plan.md  readme.md
auto_ssh_auther/: app_assets.py
auto_ssh_auther/services/: __init__.py  register.py
auto_ssh_auther/ssh/: __init__.py  remote.py
auto_ssh_auther/ui/: main_window.py
src/ssh_auther/: app_assets.py  history.py
src/ssh_auther/keys/: __init__.py  local_keys.py
src/ssh_auther/services/: register.py
src/ssh_auther/ssh/: local_config.py  remote.py  verify.py
src/ssh_auther/ui/: main_window.py
tests/: test_history.py  test_local_config.py  test_register.py  test_remote.py  test_verify.py
